@@ -3,6 +3,7 @@ package org.example.edhtrack.service;
 import org.example.edhtrack.dto.GameParticipantOverviewDTO;
 import org.example.edhtrack.dto.game.CreateGameDTO;
 import org.example.edhtrack.dto.game.CreateGameResponseDTO;
+import org.example.edhtrack.dto.game.GameEditDTO;
 import org.example.edhtrack.dto.game.GameOverviewDTO;
 import org.example.edhtrack.dto.GameParticipantDTO;
 import org.example.edhtrack.entity.*;
@@ -11,11 +12,12 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 
 import java.time.LocalDate;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
@@ -100,28 +102,36 @@ class GameServiceTest {
     }
 
     @Test
-    void getAllGames_returnsCorrectOverview() {
+    void getGames_returnsCorrectOverview() {
         Game g1 = new Game();
         g1.setId(100);
         g1.setDate(LocalDate.of(2025, 12, 1));
         g1.setNotes("Test Game");
 
         GameParticipant gp1 = new GameParticipant();
-        Player p1 = new Player(); p1.setPlayerId(3); p1.setName("Carl");
-        Deck d1 = new Deck(); d1.setDeckId(30); d1.setDeckName("DeckC");
+        Player p1 = new Player();
+        p1.setPlayerId(3);
+        p1.setName("Carl");
+
+        Deck d1 = new Deck();
+        d1.setDeckId(30);
+        d1.setDeckName("DeckC");
+
         gp1.setPlayer(p1);
         gp1.setDeck(d1);
         gp1.setWinner(true);
 
         g1.setPlayers(List.of(gp1));
 
-        when(gameRepository.findAll()).thenReturn(List.of(g1));
+        Page<Game> page = new PageImpl<>(List.of(g1));
 
-        List<GameOverviewDTO> result = gameService.getAllGames();
+        when(gameRepository.findAll(any(PageRequest.class))).thenReturn(page);
 
-        assertThat(result).hasSize(1);
+        Page<GameOverviewDTO> result = gameService.getGames(0, 10);
 
-        GameOverviewDTO gameDto = result.getFirst();
+        assertThat(result.getContent()).hasSize(1);
+
+        GameOverviewDTO gameDto = result.getContent().get(0);
         assertThat(gameDto.gameId()).isEqualTo(100);
         assertThat(gameDto.notes()).isEqualTo("Test Game");
         assertThat(gameDto.date()).isEqualTo(LocalDate.of(2025, 12, 1));
@@ -133,7 +143,7 @@ class GameServiceTest {
         assertThat(partDto.deckName()).isEqualTo("DeckC");
         assertThat(partDto.isWinner()).isTrue();
 
-        verify(gameRepository).findAll();
+        verify(gameRepository).findAll(any(PageRequest.class));
     }
 
     @Test
@@ -165,6 +175,97 @@ class GameServiceTest {
 
         assertThat(result.date()).isEqualTo(LocalDate.now());
         assertThat(result.gameId()).isEqualTo(500);
+    }
+
+    @Test
+    void getGameById_returnsCorrectGame() {
+        Game game = new Game();
+        game.setId(1);
+        game.setDate(LocalDate.of(2025, 1, 1));
+        game.setNotes("Test");
+
+        Player player = new Player();
+        player.setPlayerId(10);
+        player.setName("Alice");
+
+        Deck deck = new Deck();
+        deck.setDeckId(20);
+        deck.setDeckName("Control");
+
+        GameParticipant gp = new GameParticipant();
+        gp.setGame(game);
+        gp.setPlayer(player);
+        gp.setDeck(deck);
+        gp.setWinner(true);
+
+        game.setPlayers(List.of(gp));
+
+        when(gameRepository.findById(1)).thenReturn(Optional.of(game));
+
+        GameOverviewDTO dto = gameService.getGameById(1);
+
+        assertThat(dto.gameId()).isEqualTo(1);
+        assertThat(dto.notes()).isEqualTo("Test");
+        assertThat(dto.participants()).hasSize(1);
+
+        GameParticipantOverviewDTO p = dto.participants().getFirst();
+        assertThat(p.playerName()).isEqualTo("Alice");
+        assertThat(p.deckName()).isEqualTo("Control");
+        assertThat(p.isWinner()).isTrue();
+    }
+
+    @Test
+    void deleteGameById_deletesGame() {
+        gameService.deleteGameById(42);
+
+        verify(gameRepository).deleteById(42);
+    }
+
+    @Test
+    void updateGame_updatesGameAndParticipants() throws Exception {
+
+        Game game = new Game();
+        game.setId(1);
+        game.setDate(LocalDate.of(2024, 1, 1));
+        game.setNotes("Old");
+
+        game.setPlayers(new ArrayList<>());
+
+        when(gameRepository.findById(1)).thenReturn(Optional.of(game));
+
+        Player player = new Player();
+        player.setPlayerId(10);
+        player.setName("Alice");
+
+        Deck deck = new Deck();
+        deck.setDeckId(20);
+        deck.setDeckName("Control");
+
+        when(playerRepository.findById(10)).thenReturn(Optional.of(player));
+        when(deckRepository.findById(20)).thenReturn(Optional.of(deck));
+
+        GameParticipantDTO participantDTO = new GameParticipantDTO(10, 20, true);
+
+        GameEditDTO dto = new GameEditDTO(
+                LocalDate.of(2025, 5, 5),
+                "Updated",
+                List.of(participantDTO)
+        );
+
+        // when
+        gameService.updateGame(1, dto);
+
+        // then
+        assertThat(game.getDate()).isEqualTo(LocalDate.of(2025, 5, 5));
+        assertThat(game.getNotes()).isEqualTo("Updated");
+        assertThat(game.getPlayers()).hasSize(1);
+
+        GameParticipant gp = game.getPlayers().getFirst();
+        assertThat(gp.getPlayer().getName()).isEqualTo("Alice");
+        assertThat(gp.getDeck().getDeckName()).isEqualTo("Control");
+        assertThat(gp.isWinner()).isTrue();
+
+        verify(gameRepository).save(game);
     }
 
 }
